# genesis-vs-newton

./: .gitignore  NEXT_STEPS.md  README.md  demo_mapping.md  report.md
newton/: .coderabbit.yml  .gitattributes  .gitignore  .licenserc-docs.yaml  .licenserc.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  asv.conf.json  cloth_on_rigid_custom.py  pyproject.toml
newton/.claude/skills/newton-api-design/: SKILL.md
newton/.claude/skills/release-audit/: SKILL.md
newton/.claude/skills/release-changelog/: SKILL.md
newton/.claude/skills/release-notes/: SKILL.md
newton/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codecov.yml
newton/.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-documentation.yml  config.yml
newton/.github/workflows/: aws_gpu_benchmarks.yml  aws_gpu_tests.yml  ci.yml  docs-dev.yml  docs-release.yml  merge_queue_aws_gpu.yml  minimum_deps_tests.yml  mujoco_warp_tests.yml  pr.yml  pr_auto_assign_creator.yml  pr_closed.yml  pr_license_check.yml  pr_target_aws_gpu_benchmarks.yml  pr_target_aws_gpu_tests.yml  push_aws_gpu.yml  release.yml  scheduled_nightly.yml  warp_nightly_tests.yml
newton/asv/benchmarks/: benchmark_ik.py  benchmark_inverse_dynamics.py  benchmark_kamino.py  benchmark_mujoco.py
newton/asv/benchmarks/compilation/: bench_example_load.py
newton/asv/benchmarks/setup/: bench_model.py  bench_sdf.py
newton/asv/benchmarks/simulation/: bench_anymal.py  bench_cable.py  bench_cloth.py  bench_contacts.py  bench_cpu.py  bench_heightfield.py  bench_ik.py  bench_inverse_dynamics.py  bench_kamino.py  bench_mujoco.py  bench_quadruped_xpbd.py  bench_selection.py  bench_sensor_tiled_camera.py  bench_viewer.py
newton/docs/: conf.py  faq.rst  generate_api.py  index.rst  migration.rst  print_api.py  serve.py
newton/docs/_ext/: autodoc_filter.py  autodoc_wpfunc.py  experimental.py
newton/docs/_static/: custom.css  gh-pages-404.html  mermaid-nbsphinx.js  switcher.json
newton/docs/_templates/: class.rst  genindex.html  py-modindex.html  search.html  sidebar-nav-bs.html
newton/docs/_templates/autosummary/: class.rst
newton/docs/api/: _toctree.rst  newton.rst  newton_actuators.rst  newton_geometry.rst  newton_ik.rst  newton_math.rst  newton_selection.rst  newton_sensors.rst  newton_solvers.rst  newton_solvers_experimental.rst  newton_solvers_experimental_coupled.rst  newton_solvers_style3d.rst  newton_usd.rst  newton_utils.rst  newton_viewer.rst
newton/docs/concepts/: actuators.rst  articulations.rst  collisions.rst  conventions.rst  coupling.rst  custom_attributes.rst  extended_attributes.rst  mass_inertia.rst  sensors.rst  simulation_tuning.rst  simulation_tuning_mujoco.rst  simulation_tuning_solvers.rst  sites.rst  usd_parsing.rst  worlds.rst
newton/docs/guide/: compatibility.rst  development.rst  installation.rst  overview.rst  release.rst  tutorials.rst  visualization.rst
newton/docs/images/examples/: resize.bat  resize.sh
newton/docs/integrations/: index.rst  isaac-lab.rst  mujoco.rst
newton/docs/lab/: isaac-lab.rst
newton/docs/solvers/: index.rst  kamino.rst  mujoco.rst
newton/docs/tutorials/: 00_introduction.ipynb  01_robotics.ipynb
newton/newton/: __init__.py  _version.py  actuators.py  geometry.py  ik.py  math.py  selection.py  sensors.py  solvers.py  usd.py  utils.py  viewer.py
newton/newton/_src/actuators/: __init__.py  actuator.py  delay.py  usd_parser.py  utils.py
newton/newton/_src/core/: __init__.py  types.py
newton/newton/_src/geometry/: __init__.py  _deprecated_sdf_block_coords.py  _sdf_cache.py  broad_phase_common.py  broad_phase_nxn.py  broad_phase_sap.py  bvh.py  collision_convex.py  collision_core.py  collision_primitive.py  contact_data.py  contact_match.py  contact_reduction.py  contact_reduction_global.py  contact_reduction_hydroelastic.py  contact_sort.py  differentiable_contacts.py  edge_redundancy.py  flags.py  hashtable.py  inertia.py  kernels.py  mpr.py  multicontact.py  narrow_phase.py  raycast.py  remesh.py  sdf_contact.py  sdf_hydroelastic.py  sdf_mc.py  sdf_texture.py  sdf_utils.py  simplex_solver.py  soft_contacts_sdf.py  support_function.py  terrain_generator.py  types.py  utils.py
newton/newton/_src/math/: __init__.py  spatial.py
newton/newton/_src/sensors/: __init__.py  sensor_contact.py  sensor_frame_transform.py  sensor_imu.py  sensor_tiled_camera.py
newton/newton/_src/sim/: __init__.py  articulation.py  builder.py  collide.py  contacts.py  control.py  enums.py  graph_coloring.py  inverse_dynamics.py  model.py  state.py
newton/newton/_src/solvers/: __init__.py  flags.py  solver.py
newton/newton/_src/usd/: __init__.py  schema_resolver.py  schemas.py  utils.py
newton/newton/_src/utils/: __init__.py  benchmark.py  cable.py  color.py  deprecation.py  mesh.py  (+15 more)
newton/newton/examples/: __init__.py  __main__.py
newton/newton/licenses/: CC-BY-4.0.txt  viser_and_inter-font-family.txt
newton/newton/tests/: __init__.py  __main__.py  _usd_deformable_test_utils.py  test_actuators.py  test_admm_coupled_solver.py  test_anymal_reset.py  test_api.py  test_body_force.py  test_body_velocity.py  test_broad_phase.py  test_cable.py  test_cloth.py  test_collision_cloth.py  test_collision_pipeline.py  test_collision_primitives.py  test_coloring.py  test_cone_orientation.py  test_contact_matching.py  test_contact_reduction.py  test_contact_reduction_global.py  test_control_force.py  test_coupled_solver.py  test_custom_attributes.py  test_custom_solver.py  test_differentiable_contacts.py  test_download_assets.py  test_edge_redundancy.py  test_environment_group_collision.py  test_equality_connect_constraint_with_sim_step.py  test_equality_constraints.py  test_example_browser.py  test_example_browser_args.py  test_examples.py  test_fixed_tendon.py  test_generate_api.py  test_gjk.py  test_hashtable.py  test_heightfield.py  test_hydroelastic.py  test_ik.py  (+113 more)
newton/scripts/: check_warp_array_syntax.py
newton/scripts/ci/: discover_aws_runner_config.py  dispatch_workflow_and_wait.py  update_docs_switcher.py
(+801 files in other folders)
